--- a/Readme
+++ b/Readme
@@ -1,3 +1,3 @@
 # "Simple Weather Application using HTML, CSS &amp; JavaScript"
 
-It's a  Simple Weather Application made by using HTML, CSS &amp; JavaScript
+demo:https://zaveriya25.github.io/weather_app/
